# MingW64-checked-pointer-vector

./: CMakeLists.txt
src/: main.cpp
